# cellmeasurement-py

./: .dockerignore  .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: build-container.yml  ci.yml
src/cellmeasurement/: cli.py
src/cellmeasurement/geometry/: __init__.py  geometry.py  overlap_constraint.py
src/cellmeasurement/io/: __init__.py  geojson_writer.py  geometry.py  image_loading.py  mask_io.py  mask_reader.py
src/cellmeasurement/measurement/: __init__.py  compartment_metrics.py  image_io.py  neighbour_metrics.py  pipeline.py  shape_metrics.py
src/cellmeasurement/segmentation/: cell.py  roi_matcher.py  types.py
tests/: test_cli.py  test_compartment_metrics.py  test_downsampling.py  test_image_io.py  test_integration_real_data.py  test_mask_reader.py  test_measurement_pipeline.py  test_overlap_constraint.py  test_roi_matcher.py
