[project]
name = "cellmeasurement-py"
version = "0.1.0"
description = "Extract regions of interest from whole cell and nuclear mask images, calculate measurements and export to GeoJSON"
readme = "README.md"
authors = [
    { name = "Marek Cmero", email = "cmero.ma@wehi.edu.au" },
    { name = "Michael McKay" }
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "dask[array]>=2023.1",
    "geopandas>=1.1.3",
    "numpy>=1.24",
    "pip>=26.0.1",
    "rasterio>=1.3",
    "scikit-image>=0.21",
    "scipy>=1.10",
    "shapely>=2.0",
    "spatialdata>=0.7.2",
    "tifffile>=2024.8",
    "typer>=0.24.1",
]


[build-system]
requires = ["hatchling", "hatch-mypyc>=0.16.0"]
build-backend = "hatchling.build"

[project.scripts]
cellmeasurement = "cellmeasurement.cli:app"

[dependency-groups]
dev = [
 "mypy[mypyc]>=1.19.1",
 "pytest>=8.0",
 "pyright>=1.1.408",
 "ruff>=0.15.8",
]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.targets.wheel.hooks.mypyc]
enable-by-default = true
dependencies = ["hatch-mypyc>=0.16.0", "mypy[mypyc]>=1.19.1"]
require-runtime-dependencies = true
exclude = [
    "src/cellmeasurement/__init__.py",
    "src/cellmeasurement/cli.py",
    "src/cellmeasurement/geometry/",
    "src/cellmeasurement/io/",
    "src/cellmeasurement/measurement/",
    "src/cellmeasurement/segmentation/__init__.py",
]
